--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         /* Services Grid */
         .services-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 2rem;
             margin-top: 3rem;
         }
@@ -429,7 +429,7 @@
             </div>
             <ul>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <button class="mobile-menu">☰</button>
@@ -439,7 +439,7 @@
     <section class="hero">
         <div class="hero-content">
             <h2>Strategy for Purpose-Driven Growth</h2>
-            <p>Azuvila partners with small businesses to accelerate federal contracting success through strategic growth planning, capture excellence, and sustainable business development systems that transform potential into performance.</p>
+            <p>Azuvila partners with small businesses to accelerate growth through strategic planning and sustainable business development systems that transform potential into performance.</p>
             <a href="#contact" class="cta-button">Let's Connect</a>
         </div>
     </section>
@@ -447,7 +447,7 @@
     <section id="services">
         <div class="container">
             <div class="section-header">
-                <h2>Core Capabilities</h2>
+                <h2>Service Offerings</h2>
                 <p>Comprehensive advisory services designed to strengthen your competitive position and accelerate federal contracting growth</p>
             </div>
             <div class="services-grid">
@@ -492,30 +492,6 @@
         </div>
     </section>
 
-    <section id="about">
-        <div class="container">
-            <div class="about-content">
-                <div class="about-text">
-                    <h3>About Azuvila</h3>
-                    <p>Azuvila supports strategic growth and partnership development for small businesses entering the government contracting market. Our advisory services include business development strategy, capture management, and proposal development.</p>
-                    <p>Whether conducting market trend analysis, leading a business development audit, or supporting positioning efforts, our focus is enhancing your visibility and advancing your ability to grow. We improve systems, strengthen processes, and provide guidance to transform your capture and proposal structure.</p>
-                    <p><strong>Founder:</strong> Maricarmen Smith-Martinez is a strategic growth and partnerships executive with extensive cross-sector leadership experience in government contracting, international development, and nonprofit strategy. She specializes in organizational growth, partnership development, and mission-aligned portfolio expansion.</p>
-                </div>
-                <div class="credentials">
-                    <h4>Business Classification</h4>
-                    <ul>
-                        <li>Woman-Owned Small Business (WOSB)</li>
-                        <li>Small Business</li>
-                    </ul>
-                    <h4 style="margin-top: 2rem;">NAICS Code</h4>
-                    <ul>
-                        <li>541611 – Administrative Management and General Management Consulting Services</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <section id="contact">
         <div class="container">
             <div class="section-header">
@@ -545,7 +521,7 @@
                         <div class="contact-item-icon">👤</div>
                         <div>
                             <h4>Leadership</h4>
-                            <p>Maricarmen Smith-Martinez<br>Founder & CEO</p>
+                            <p>Maricarmen Smith-Martinez, Founder & CEO</p>
                         </div>
                     </div>
                     <div class="contact-item">
