--- a/about.html
+++ b/about.html
@@ -271,7 +271,7 @@
         <div class="container">
             <div class="about-grid">
                 <div class="photo-container">
-                    <img src="maricarmen.jpg" alt="Maricarmen Smith-Martinez" class="profile-photo">
+                    <img src="maricarmen.png" alt="Maricarmen Smith-Martinez" class="profile-photo">
                 </div>
                 <div class="about-content">
                     <h3>Our Story</h3>
