--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     <section id="contact">
         <div class="container">
             <div class="section-header">
-                <h2>Ignite a Conversation</h2>
+                <h2>Start the Conversation</h2>
                 <p>Ready to accelerate your federal contracting growth? Connect to discuss how Azuvila can support your business development goals.</p>
             </div>
             <div class="contact-content">
