--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Azuvila</title>
     <meta name="description" content="Learn about Azuvila and founder Maricarmen Smith-Martinez, a strategic growth and partnerships executive with extensive cross-sector leadership experience.">
+    <link rel="icon" type="image/png" href="logo.png">
     <style>
         * {
             margin: 0;
@@ -269,25 +270,25 @@
 
     <section class="about-section">
         <div class="container">
-            <div class="about-grid">
-                <div class="photo-container">
-                    <img src="maricarmen.png" alt="Maricarmen Smith-Martinez" class="profile-photo">
-                </div>
-                <div class="about-content">
-                    <h3>Our Story</h3>
-                    <p>Azuvila supports strategic growth and partnership development for small businesses entering the government contracting market. Our advisory services include business development strategy, capture management, and proposal development.</p>
-                    <p>Whether conducting market trend analysis, leading a business development audit, or supporting positioning efforts, our focus is enhancing your visibility and advancing your ability to grow. We improve systems, strengthen processes, and provide guidance to transform your capture and proposal structure.</p>
-                </div>
+            <div class="about-content">
+                <h3>Our Story</h3>
+                <p>Azuvila supports strategic growth and partnership development for small businesses entering the government contracting market. Our advisory services include business development strategy, capture management, and proposal development.</p>
+                <p>Whether conducting market trend analysis, leading a business development audit, or supporting positioning efforts, our focus is enhancing your visibility and advancing your ability to grow. We improve systems, strengthen processes, and provide guidance to transform your capture and proposal structure.</p>
             </div>
 
-            <div class="about-content">
-                <h3>Meet the Founder</h3>
-                <p><strong>Maricarmen Smith-Martinez</strong> is a strategic growth and partnerships executive with extensive cross-sector leadership experience in government contracting, international development, and nonprofit strategy. She specializes in organizational growth, partnership development, and mission-aligned portfolio expansion.</p>
-                <p>Maricarmen is an adaptable leader with a proven ability to scale impact through cross-cultural collaboration, USG engagement, and global operations oversight. She is a resilient strategist recognized for spearheading multimillion-dollar international portfolio growth while strengthening organizational infrastructure to support long-term sustainability.</p>
-                <p>As a committed changemaker, Maricarmen is known for cultivating high-value partnerships and connecting strategic vision with purpose-driven implementation.</p>
-                
-                <div style="margin-top: 2rem;">
-                    <a href="index.html#contact" class="cta-button">Let's Chat</a>
+            <div class="about-grid">
+                <div class="photo-container">
+                    <img src="maricarmen.jpg" alt="Maricarmen Smith-Martinez" class="profile-photo">
+                </div>
+                <div class="about-content">
+                    <h3>Meet the Founder</h3>
+                    <p><strong>Maricarmen Smith-Martinez</strong> is a strategic growth and partnerships executive with extensive cross-sector leadership experience in government contracting, international development, and nonprofit strategy. She specializes in organizational growth, partnership development, and mission-aligned portfolio expansion.</p>
+                    <p>Maricarmen is an adaptable leader with a proven ability to scale impact through cross-cultural collaboration, USG engagement, and global operations oversight. She is a resilient strategist recognized for spearheading multimillion-dollar international portfolio growth while strengthening organizational infrastructure to support long-term sustainability.</p>
+                    <p>As a committed changemaker, Maricarmen is known for cultivating high-value partnerships and connecting strategic vision with purpose-driven implementation.</p>
+                    
+                    <div style="margin-top: 2rem;">
+                        <a href="index.html#contact" class="cta-button">Let's Chat</a>
+                    </div>
                 </div>
             </div>
 
