--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - Azuvila</title>
     <meta name="description" content="Comprehensive advisory services designed to strengthen your competitive position and accelerate growth.">
+    <link rel="icon" type="image/png" href="logo.png">
     <style>
         * {
             margin: 0;
