--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Azuvila - Connecting Purpose with Partners</title>
-    <meta name="description" content="Azuvila partners with small businesses to accelerate growth through strategic planning and sustainable business development systems.">
+    <meta name="description" content="Azuvila partners with small businesses and mission-driven organizations to accelerate growth through strategic planning and sustainable business development systems.">
     <link rel="icon" type="image/png" href="logo.png">
     <style>
         * {
@@ -372,7 +372,7 @@
     <section class="hero">
         <div class="hero-content">
             <h2>Strategy for Purpose-Driven Growth</h2>
-            <p>Azuvila partners with small businesses to accelerate growth through strategic planning and sustainable business development systems that transform potential into performance.</p>
+            <p>Azuvila partners with small businesses and organizations to accelerate growth through strategic planning and sustainable business development systems that transform potential into performance.</p>
             <a href="services.html" class="cta-button">Explore Our Services</a>
         </div>
     </section>
@@ -392,8 +392,8 @@
     <section id="contact">
         <div class="container">
             <div class="section-header">
-                <h2>Ignite a Conversation</h2>
-                <p>Ready to accelerate your federal contracting growth? Connect to discuss how Azuvila can support your business development goals.</p>
+                <h2>Start the Conversation</h2>
+                <p>Ready to accelerate your growth? Connect to discuss how Azuvila can support your business development goals.</p>
             </div>
             <div class="contact-content">
                 <div class="contact-info">
@@ -435,7 +435,7 @@
                         </div>
                         <div>
                             <h4>Our Approach</h4>
-                            <p>We work as trusted advisors and active contributors to your growth strategy, helping you build a sustainable, repeatable model for winning federal business.</p>
+                            <p>We work as trusted advisors and active contributors to your growth strategy, helping you build a sustainable, repeatable model for winning new business.</p>
                         </div>
                     </div>
                 </div>
